--- a/css/home.css
+++ b/css/home.css
@@ -100,9 +100,8 @@ li>a:hover {
 
 .foot_logo {
   font-family: Courier;
-  font-size: 25px;
-  letter-spacing: 12px;
-  font-family: Bold;
+  font-size: 2.1rem;
+  font-weight: bold;
 }
 
 .feed_back {
